--- a/.eslintrc
+++ b/.eslintrc
@@ -110,7 +110,7 @@
 
     ////////// Stylistic Issues //////////
 
-    "brace-style": 2,
+    "brace-style": [2, "allman", { "allowSingleLine": false }],
     "camelcase": 2,
     "comma-spacing": 2,
     "comma-style": 2,
@@ -150,6 +150,7 @@
     "wrap-regex": 2,
     "max-len": [2, 120, 2],
     "no-multiple-empty-lines": [2, {"max": 2, "maxEOF": 1}],
-    "array-bracket-spacing": [2, "never"]
+    "array-bracket-spacing": [2, "never"],
+    "lines-around-comment": [2, { "beforeBlockComment": true, "beforeLineComment": true }]
   }
 }
